--- a/src/views/verify_profile.hbs
+++ b/src/views/verify_profile.hbs
@@ -22,7 +22,7 @@
     
   
   <div class="cover">
-  <img src="/img/crops.gif" id="mygif" alt="...">
+  <img src="/img/crops.gif" id="mygif" alt="..."/>
     <header id="header-wrap">
       <!-- Navbar Start -->
       <nav
@@ -50,7 +50,7 @@
           </div>
           <div class="collapse navbar-collapse" id="main-navbar" style="margin-left: 20%;">
             <ul class="navbar-nav mr-auto w-100">
-              <li class="nav-item active">
+              <li class="nav-item">
                 <a class="nav-link" href="dashboard">Dashboard</a>
               </li>
               <li class="nav-item">
@@ -73,52 +73,36 @@
     <div class="content">
         <br><br><br><br>
         <div style="text-align: center; position: sticky;">
-        <h1> <span style="background-color: #fff; font-size: 40px; color:#016168; padding: 15px; opacity: 80%;">Dashboard</span> </h1>
+        <h1> <span style="background-color: #fff; font-size: 40px; color:#016168; padding: 15px; opacity: 80%;">Profile</span> </h1>
         </div>
         <br>
         <section id="form-dom">
         <div class="container" style="margin-bottom: 30px; opacity: 90%;">
           <div class="row">
             <div class="col-12">
-              <div class="col-12 col-md-12 col-lg-8 log-style" style="padding: 5px;">
-                <table style="width: 100%;">
-                    <tr>
-                        <th>Name of user</th>
-                        <th>Email id</th>
-                        <th>Type</th>
-                        <th>Verify</th>
-                    </tr>
-                    <tr>
-                        <td>Vaishnavi</td>
-                        <td>vaishnavi@gmail.com</td>
-                        <td>Farmer</td>
-                        <td><a href="verify_profile" class="btn btn-common btn-nv-sty">Verify</a></td>
-                    </tr>
-                    <tr>
-                        <td>Arya</td>
-                        <td>arya@gmail.com</td>
-                        <td>Farmer</td>
-                        <td><a href="verify_profile" class="btn btn-common btn-nv-sty">Verify</a></td>
-                    </tr>
-                    <tr>
-                        <td>Buyer</td>
-                        <td>buyer@gmail.com</td>
-                        <td>Buyer</td>
-                        <td><a href="verify_profile" class="btn btn-common btn-nv-sty">Verify</a></td>
-                    </tr>
-                    <tr>
-                        <td>Investor</td>
-                        <td>investor@gmail.com</td>
-                        <td>Investor</td>
-                        <td><a href="verify_profile" class="btn btn-common btn-nv-sty">Verify</a></td>
-                    </tr>
-                    <tr>
-                        <td>Bhima</td>
-                        <td>bhima@gmail.com</td>
-                        <td>Farmer</td>
-                        <td><a href="verify_profile" class="btn btn-common btn-nv-sty">Verify</a></td>
-                    </tr>
-            </table>
+              <div class="col-12 col-md-12 col-lg-8 log-style">
+                <p style="font-size: 25px;">Name : </p>
+                <br>
+                <p style="font-size: 20px;">Email id : </p>
+                <br>
+                <p style="font-size: 20px;">Land area : </p>
+                <br>
+                <p style="font-size: 20px;">Document 1 : </p>
+                <br>
+                <img src="/img/potato.jpg" style="width: 100%;"/>
+                <br><br>
+                <p style="font-size: 20px;">Document 2 : </p>
+                <br>
+                <img src="/img/sample.jpg" style="width: 100%;"/>
+                <br><br>
+                <div class="row">
+                    <div class="col-6">
+                        <button class="btn btn-common btn-nv-sty" style="width: 100%;">Approve</button>
+                    </div>
+                    <div class="col-6">
+                        <button class="btn btn-common btn-nv-sty" style="width: 100%;">Disapprove</button>
+                    </div>
+                </div>
               </div>
             </div>
           </div>
