--- a/src/views/chat.hbs
+++ b/src/views/chat.hbs
@@ -231,7 +231,7 @@ overflow-y: auto;
                       </p>
                       <span id="file_name" style="font-size: 13px; position: absolute; right: 20; top: 45;"></span>
                       </label>
-                      <input type="file" name="chatimage" id="chatimage" onchange="uploadFile(this)"/>
+                      <input type="file" name="chatimage" id="chatimage" onchange="uploadFile(this)" accept=".png, .jpg, .jpeg"/>
                       <button class="msg_send_btn" type="submit" id="chatbutton" name="chatbutton">
                         <i class="fa fa-paper-plane-o" aria-hidden="true"></i></button>
                     </form>
