--- a/src/views/viewfarmers.hbs
+++ b/src/views/viewfarmers.hbs
@@ -154,7 +154,7 @@
             <div class="row">
                 <div class="col-lg-3 col-2"></div>
                 <div class="col-lg-6 col-8">
-                  <a href="/chat/{{this.1._id}}" class="btn btn-common btn-nv-sty" style="width: 100%;">Initiate chat</a>
+                  <a href="/chat/{{this.1._id}}" class="btn btn-common btn-nv-sty" style="width: 100%;">Chat</a>
                 </div>
                 <div class="col-lg-3 col-2"></div>
               </div>
@@ -179,7 +179,7 @@
             <div class="row">
                 <div class="col-lg-3 col-2"></div>
                 <div class="col-lg-6 col-8">
-                  <a href="/chat/{{this.3._id}}" class="btn btn-common btn-nv-sty" style="width: 100%;">Initiate chat</a>
+                  <a href="/chat/{{this.3._id}}" class="btn btn-common btn-nv-sty" style="width: 100%;">Chat</a>
                 </div>
                 <div class="col-lg-3 col-2"></div>
               </div>
