--- a/src/views/help.hbs
+++ b/src/views/help.hbs
@@ -41,16 +41,16 @@
                             <p style="font-size: 20;">Click on any of the links below to see the functionalities available for each user and how to use them:</p>
                         </li><br>
                         <li>
-                            <a href="">Tutorial for farmers</a>
+                            <a href="help_farmer">Tutorial for farmers</a>
                         </li><br>
                         <li>
-                            <a href="">Tutorial for investors</a>
+                            <a href="help_investor">Tutorial for investors</a>
                         </li><br>
                         <li>
-                            <a href="">Tutorial for food-making institutions</a>
+                            <a href="help_institution">Tutorial for food-making institutions</a>
                         </li><br>                        
                         <li>
-                            <a href="">Tutorial for buyers</a>
+                            <a href="help_buyer">Tutorial for buyers</a>
                         </li>
                     </ul>
                   </div>
