added chat notifications

--- a/src/views/chat_app_farmer.hbs
+++ b/src/views/chat_app_farmer.hbs
@@ -120,7 +120,7 @@
                         </div>
                         <div class="col-1">
                           <div class="col-1" style="margin-top: 17px;">
-                            <button type="button" class="btn btn-success btn-circle">1</button>
+                            <button type="button" class="btn btn-success btn-circle">{{notifs}}</button>
                           </div>
                         </div>
                     </div>
@@ -144,7 +144,7 @@
                         </div>
                         <div class="col-1">
                           <div class="col-1" style="margin-top: 17px;">
-                            <button type="button" class="btn btn-success btn-circle">1</button>
+                            <button type="button" class="btn btn-success btn-circle">{{notifs}}</button>
                           </div>
                         </div>
                     </div>
@@ -169,7 +169,7 @@
                         </div>
                         <div class="col-1">
                           <div class="col-1" style="margin-top: 17px;">
-                            <button type="button" class="btn btn-success btn-circle">1</button>
+                            <button type="button" class="btn btn-success btn-circle">{{notifs}}</button>
                           </div>
                         </div>
                     </div>
