--- a/src/views/chat_app.hbs
+++ b/src/views/chat_app.hbs
@@ -156,7 +156,7 @@
                             </p>
                         </div>
                         <div class="col-1" style="margin-top: 17px;">
-                          <button type="button" class="btn btn-success btn-circle">1</button>
+                          <button type="button" class="btn btn-success btn-circle">{{notifs}}</button>
                         </div>
                     </div>
                 </div>
