--- a/src/views/admin_dashboard.hbs
+++ b/src/views/admin_dashboard.hbs
@@ -72,6 +72,10 @@
     </header>
     <div class="content">
         <br><br><br><br>
+        <div style="text-align: right; position: sticky; padding-right: 50px">
+          <span style="background-color: #fff; font-size: 20px; color:#016168; padding: 10px; opacity: 80%;">Welcome Admin!</span>
+        </div>
+        <br>
         <div style="text-align: center; position: sticky;">
         <h1> <span style="background-color: #fff; font-size: 40px; color:#016168; padding: 15px; opacity: 80%;">Dashboard</span> </h1>
         </div>
