--- a/src/views/farmer_profile.hbs
+++ b/src/views/farmer_profile.hbs
@@ -47,7 +47,7 @@
             </button>
             <img src="/img/logo.png" class="navbar-brand" style="width: 250px; height: 70px" alt=""/>
           </div>
-          <div class="collapse navbar-collapse" id="main-navbar" style="margin-left: 20%;">
+          <div class="collapse navbar-collapse" id="main-navbar" style="margin-left: 15%;">
             <ul class="navbar-nav mr-auto w-100">
               <li class="nav-item">
                 <a class="nav-link" href="dashboard">Dashboard</a>
@@ -87,8 +87,11 @@
         </ul>
       </nav>
     </header>
-    <br><br>
+    <br><br><br><br>
   <div class="content">
+    <div style="text-align: right; position: sticky; padding-right: 50px">
+      <span style="background-color: #fff; font-size: 20px; color:#016168; padding: 10px; opacity: 80%;">Hello {{farmer.fullname}}</span>
+    </div>
     <br><br>
     <section id="form-dom" class="services">
       <div class="container" style="margin-bottom: 30px; opacity:90%">
