--- a/src/views/institution_dashboard.hbs
+++ b/src/views/institution_dashboard.hbs
@@ -88,7 +88,10 @@
         </ul>
       </nav>
     </header>
-    <br><br><br><br><br>
+    <br><br><br><br><div style="text-align: right; position: sticky; padding-right: 50px">
+      <span style="background-color: #fff; font-size: 20px; color:#016168; padding: 10px; opacity: 80%;">Welcome {{institution.fullname}}</span>
+    </div>
+    <br><br>
     <h1 class="section-title wow fadeInUp animated" data-wow-delay="0.2s" style="visibility: visible; -webkit-animation-delay: 0.2s; -moz-animation-delay: 0.2s; animation-delay: 0.2s;">
        <span style="background-color: #fff; font-size: 50px; color:#016168; padding: 15px; opacity: 90%;">Dashboard</span> 
     </h1>
