--- a/src/views/investor_profile.hbs
+++ b/src/views/investor_profile.hbs
@@ -87,8 +87,11 @@
         </ul>
       </nav>
     </header>
-<br><br>
+<br><br><br><br>
   <div class="content">
+    <div style="text-align: right; position: sticky; padding-right: 50px">
+      <span style="background-color: #fff; font-size: 20px; color:#016168; padding: 10px; opacity: 80%;">Hello {{investor.fullname}}</span>
+    </div>
     <br><br>
     <section id="form-dom" class="services">
       <div class="container" style="margin-bottom: 30px; opacity:90%">
