--- a/src/views/buyer_profile.hbs
+++ b/src/views/buyer_profile.hbs
@@ -44,7 +44,7 @@
             </button>
             <img src="/img/logo.png" class="navbar-brand" style="width: 250px; height: 70px" alt=""/>
           </div>
-          <div class="collapse navbar-collapse" id="main-navbar" style="margin-left: 10%;">
+          <div class="collapse navbar-collapse" id="main-navbar" style="margin-left: 4%;">
             <ul class="navbar-nav mr-auto w-100">
               <li class="nav-item">
                 <a class="nav-link" href="dashboard">Dashboard</a>
@@ -95,7 +95,10 @@
 
   <div class="content">
     <br><br>
-    
+      <div style="text-align: right; position: sticky; padding-right: 50px">
+        <span style="background-color: #fff; font-size: 20px; color:#016168; padding: 10px; opacity: 80%;">Hello {{buyer.fullname}}</span>
+      </div>
+      <br>
       <section id="form-dom" class="services">
         <div class="container" style="margin-bottom: 30px; opacity:90%">
           <div class="row">
