--- a/src/views/chat_app.hbs
+++ b/src/views/chat_app.hbs
@@ -132,6 +132,10 @@
       </nav>
     </header>
     <br><br><br><br>
+    <div style="text-align: right; position: sticky; padding-right: 50px">
+      <span style="background-color: #fff; font-size: 20px; color:#016168; padding: 10px; opacity: 80%;">Hello </span>
+    </div>
+    <br><br>
     <h1 class="section-title wow fadeInUp animated" data-wow-delay="0.2s" style="visibility: visible; -webkit-animation-delay: 0.2s; -moz-animation-delay: 0.2s; animation-delay: 0.2s;">
        <span style="background-color: #fff; font-size: 40px; color:#016168; padding: 15px; opacity: 90%;">Chat list</span> 
     </h1>
