--- a/src/views/viewfarmers.hbs
+++ b/src/views/viewfarmers.hbs
@@ -80,7 +80,7 @@
             </button>
             <img src="/img/logo.png" class="navbar-brand" style="width: 230px; height:70px" alt=""/>
           </div>
-          <div class="collapse navbar-collapse" id="main-navbar" style="margin-left: 10%;">
+          <div class="collapse navbar-collapse" id="main-navbar" style="margin-left: 5%;">
             <ul class="navbar-nav mr-auto w-100">
               <li class="nav-item">
                 <a class="nav-link" href="dashboard">Dashboard</a>
@@ -130,6 +130,10 @@
       </nav>
     </header>
     <br><br><br><br>
+    <div style="text-align: right; position: sticky; padding-right: 50px">
+      <span style="background-color: #fff; font-size: 20px; color:#016168; padding: 10px; opacity: 80%;">Hello </span>
+    </div>
+    <br><br>
     <h1 class="section-title wow fadeInUp animated" data-wow-delay="0.2s" style="visibility: visible; -webkit-animation-delay: 0.2s; -moz-animation-delay: 0.2s; animation-delay: 0.2s;">
        <span style="background-color: #fff; font-size: 40px; color:#016168; padding: 15px; opacity: 90%;">Farmer profiles</span> 
     </h1>
