--- a/src/views/notifications.hbs
+++ b/src/views/notifications.hbs
@@ -95,7 +95,9 @@
     </h1>
     <br>
     {{#if notifications}}
-    <h2 class="section-title wow fadeInUp animated">Deals</h2>
+    <h1 class="section-title wow fadeInUp animated" data-wow-delay="0.2s" style="visibility: visible; -webkit-animation-delay: 0.2s; -moz-animation-delay: 0.2s; animation-delay: 0.2s;">
+       <span style="background-color: #fff; font-size: 30px; color:#016168; padding: 15px; opacity: 90%; color:black">Deals</span> 
+    </h1>
     {{#each notifications}}
     
     <div class="row">
@@ -147,7 +149,9 @@
     {{/if}}
 
     {{#if not_orders}}
-    <h2 class="section-title wow fadeInUp animated">Orders</h2>
+    <h1 class="section-title wow fadeInUp animated" data-wow-delay="0.2s" style="visibility: visible; -webkit-animation-delay: 0.2s; -moz-animation-delay: 0.2s; animation-delay: 0.2s;">
+       <span style="background-color: #fff; font-size: 30px; color:#016168; padding: 15px; opacity: 90%; color:black">Orders</span> 
+    </h1>
     {{#each not_orders}}
     
     <div class="row">
