--- a/src/views/help_institution.hbs
+++ b/src/views/help_institution.hbs
@@ -33,7 +33,7 @@
       <section id="form-dom">
         <div class="container" style="margin-bottom: 30px; opacity: 90%;">
             <video controls style="width: 100%;">
-                <source src="/img/video.mp4" type="video/mp4">
+                <source src="/img/farmer_video.mp4" type="video/mp4">
                 Your browser does not support the video element. Kindly update it to latest version.
             </video >
         </div>
