--- a/src/views/registerbuyer.hbs
+++ b/src/views/registerbuyer.hbs
@@ -119,7 +119,7 @@
       </section>
     
   </div>
-  <footer id="contact" class="footer-area section-padding" style="opacity: 80%; color:white">
+  {{!-- <footer id="contact" class="footer-area section-padding" style="opacity: 80%; color:white">
         <div class="container">
             <div class="row">
                 <div class="col-lg-6 col-8 wow fadeInUp" data-wow-delay="0.4s">
@@ -142,7 +142,7 @@
                 </div>
             </div>
         </div>
-    </footer>
+    </footer> --}}
 
   <!-- Go to Top Link -->
   <a href="#" class="back-to-top">
