--- a/src/views/registerfarmer.hbs
+++ b/src/views/registerfarmer.hbs
@@ -194,7 +194,7 @@
       </div>
     </section>
     </div>
-      <footer id="contact" class="footer-area section-padding" style="opacity: 80%; color:white">
+      {{!-- <footer id="contact" class="footer-area section-padding" style="opacity: 80%; color:white">
         <div class="container">
             <div class="row">
                 <div class="col-lg-6 col-8 wow fadeInUp" data-wow-delay="0.4s">
@@ -217,7 +217,7 @@
                 </div>
             </div>
         </div>
-    </footer>
+    </footer> --}}
     
     <!-- Go to Top Link -->
     <a href="#" class="back-to-top">
