--- a/src/views/buyer_dashboard.hbs
+++ b/src/views/buyer_dashboard.hbs
@@ -96,7 +96,7 @@
     </header>
     <br><br><br><br>
     <div style="text-align: right; position: sticky; padding-right: 50px">
-      <span style="background-color: #fff; font-size: 20px; color:#016168; padding: 10px; opacity: 80%;">Welcome {{buyer.fullname}}</span>
+      <span style="background-color: #fff; font-size: 20px; color:#016168; padding: 10px; opacity: 80%;">Welcome {{user.username}}</span>
     </div>
     <br><br>
     <h1 class="section-title wow fadeInUp animated" data-wow-delay="0.2s" style="visibility: visible; -webkit-animation-delay: 0.2s; -moz-animation-delay: 0.2s; animation-delay: 0.2s;">
