--- a/src/views/buyer_profile.hbs
+++ b/src/views/buyer_profile.hbs
@@ -96,7 +96,7 @@
   <div class="content">
     <br><br>
       <div style="text-align: right; position: sticky; padding-right: 50px">
-        <span style="background-color: #fff; font-size: 20px; color:#016168; padding: 10px; opacity: 80%;">Hello {{buyer.fullname}}</span>
+        <span style="background-color: #fff; font-size: 20px; color:#016168; padding: 10px; opacity: 80%;">Hello {{user.username}}</span>
       </div>
       <br>
       <section id="form-dom" class="services">
