--- a/src/views/farmer_dashboard.hbs
+++ b/src/views/farmer_dashboard.hbs
@@ -134,7 +134,7 @@
         <div class="card" style="opacity: 90%; height: 130px">
           <div class="card-body">
             <h5 class="card-title">Name</h5>
-            <p class="card-text">{{farmer.fullname}}</p>
+            <p class="card-text">{{user.username}}</p>
           </div>
         </div>
       </div>
