--- a/src/views/institution_profile.hbs
+++ b/src/views/institution_profile.hbs
@@ -90,7 +90,7 @@
 <br><br><br><br>
   <div class="content">
     <div style="text-align: right; position: sticky; padding-right: 50px">
-      <span style="background-color: #fff; font-size: 20px; color:#016168; padding: 10px; opacity: 80%;">Hello {{institution.fullname}}</span>
+      <span style="background-color: #fff; font-size: 20px; color:#016168; padding: 10px; opacity: 80%;">Hello {{user.username}}</span>
     </div>
     <br><br>
     <section id="form-dom" class="services">
