--- a/src/views/verify_profile.hbs
+++ b/src/views/verify_profile.hbs
@@ -51,10 +51,10 @@
           <div class="collapse navbar-collapse" id="main-navbar" style="margin-left: 20%;">
             <ul class="navbar-nav mr-auto w-100">
               <li class="nav-item">
-                <a class="nav-link" href="dashboard">Dashboard</a>
+                <a class="nav-link" href="/admin/dashboard">Dashboard</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="logout">Logout</a>
+                <a class="nav-link" href="/admin/logout">Logout</a>
               </li>
             </ul>
           </div>
@@ -62,10 +62,10 @@
 
         <ul class="mobile-menu">
           <li>
-            <a class="page-scroll" href="dashboard">Dashboard</a>
+            <a class="page-scroll" href="/admin/dashboard">Dashboard</a>
           </li>
           <li>
-            <a class="page-scroll" href="logout">Logout</a>
+            <a class="page-scroll" href="/admin/logout">Logout</a>
           </li>
         </ul>
       </nav>
