--- a/src/views/registerfarmer.hbs
+++ b/src/views/registerfarmer.hbs
@@ -134,6 +134,16 @@
                     </div>
                     <div class="row">
                       <div class="col">
+                        <input
+                          type="text"
+                          class="form-control"
+                          placeholder="Location"
+                          name="location"
+                        />
+                      </div>
+                    </div>
+                    <div class="row">
+                      <div class="col">
                         <label for="landpaper">Upload land ownership proof:</label>
                         <input
                           type="file"
@@ -147,7 +157,7 @@
 
                     <div class="row">
                       <div class="col">
-                        <label for="aadhar">Upload organic farm certificate:</label>
+                        <label for="aadhar">Upload organic farming certificate:</label>
                         <input
                           type="file"
                           class="form-control"
