--- a/src/views/verify_profile.hbs
+++ b/src/views/verify_profile.hbs
@@ -92,6 +92,8 @@
                 <br>
                 <p style="font-size: 20px;">Land area : {{profile.land_area}} acres</p>
                 <br>
+                <p style="font-size: 20px;">Location : {{profile.location}}</p>
+                <br>
                 <p style="font-size: 20px;">Land ownership proof : </p>
                 <br>
                 <img src="data:{{profile.land_doc_type}};base64,{{profile.land_doc}}" style="width: 100%;" />
