--- a/src/views/viewfarmers.hbs
+++ b/src/views/viewfarmers.hbs
@@ -155,6 +155,7 @@
             </p>
             <p class="card-text">Crops grown : {{2}} </p>
             <p class="card-text">Area of land : {{this.1.land_area}} acres</p>
+            <p class="card-text">Location : {{this.1.location}}</p>
             <div class="row">
                 <div class="col-lg-3 col-2"></div>
                 <div class="col-lg-6 col-8">
@@ -180,6 +181,7 @@
             </p>
             <p class="card-text">Crops grown : {{4}}</p>
             <p class="card-text">Area of land : {{this.3.land_area}} acres</p>
+            <p class="card-text">Location : {{this.3.location}}</p>
             <div class="row">
                 <div class="col-lg-3 col-2"></div>
                 <div class="col-lg-6 col-8">
